--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="EasyTalk"
+            android:text="SpeakEasy"
             android:textAlignment="center"
             android:textSize="34sp"
             android:textStyle="italic" />
