--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,15 +15,20 @@
         android:background="@color/white"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         tools:layout_editor_absoluteX="1dp">
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="247dp"
             android:layout_height="222dp"
-            android:layout_marginLeft="85dp"
+
+            android:layout_gravity="center_horizontal"
+
             app:srcCompat="@drawable/logo" />
 
         <TextView
